--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,28 @@
 name: CI
 
-on: push
+on: [push, pull_request]
 
 jobs:
   build:
     name: apriltag_ros
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        include:
+          - {ubuntu: "22.04", ros: humble}
+          - {ubuntu: "24.04", ros: jazzy}
+
     container:
-      image: ubuntu:22.04
+      image: ubuntu:${{ matrix.ubuntu }}
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
-    - uses: ros-tooling/setup-ros@v0.4
+    - uses: ros-tooling/setup-ros@v0.7
 
-    - uses: ros-tooling/action-ros-ci@v0.2
+    - uses: ros-tooling/action-ros-ci@v0.3
       with:
         package-name: apriltag_ros
-        target-ros2-distro: humble
+        target-ros2-distro: ${{ matrix.ros }}
         vcs-repo-file-url: .github/deps.repos
