--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/apriltag_ros
-	previous = 
-	base = 77a90c4
+	previous = 77a90c4
+	base = 474cea3
 	trim = 
 	trimbase = 
