--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"3.1.1-5": ["Thu Apr 18 2024", "Christian Rauch", "Rauch.Christian@gmx.de"], "3.1.1-4": ["Tue Mar 05 2024", "Christian Rauch", "Rauch.Christian@gmx.de"]}
+{"3.2.2-1": ["Sun Sep 29 2024", "Christian Rauch", "Rauch.Christian@gmx.de"], "3.1.1-5": ["Thu Apr 18 2024", "Christian Rauch", "Rauch.Christian@gmx.de"], "3.1.1-4": ["Tue Mar 05 2024", "Christian Rauch", "Rauch.Christian@gmx.de"]}
